More Links added

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,11 +22,10 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="https://heaven4sure.com/">Heaven4Sure.com</a></li>
+                        <li><a class="dropdown-item" href="https://www.thegloriousgospel.ca/">TheGloriousGospel.ca</a></li>
                         <li><a class="dropdown-item" href="https://gospelriver.com/believershymnbook/">Believers Hymm Book</a></li>
                         <li><a class="dropdown-item" href="https://www.bible.com/">Bible (YouVersion Website/App)</a></li>
-
-                        <li>
-                            <hr class="dropdown-divider">
+                        <li>                           <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
