--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,13 +21,18 @@
                         Helpful Resources
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="https://heaven4sure.com/">Heaven4Sure.com</a></li>
-                        <li><a class="dropdown-item" href="https://www.thegloriousgospel.ca/">TheGloriousGospel.ca</a></li>
-                        <li><a class="dropdown-item" href="https://gospelriver.com/believershymnbook/">Believers Hymm Book</a></li>
-                        <li><a class="dropdown-item" href="https://www.bible.com/">Bible (YouVersion Website/App)</a></li>
-                        <li>                           <hr class="dropdown-divider">
+                        <li><a class="dropdown-item" href="https://heaven4sure.com/" target="_blank" Heaven4Sure.com</a>
                         </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="https://www.thegloriousgospel.ca/"
+                                target="_blank">TheGloriousGospel.ca</a></li>
+                        <li><a class="dropdown-item" href="https://gospelriver.com/believershymnbook/"
+                                target="_blank">Believers Hymm Book</a></li>
+                        <li><a class="dropdown-item" href="https://www.bible.com/">Bible (YouVersion Website/App)</a>
+                        </li>
+            <!--             <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                     </ul>
                 </li>
             </ul>
