--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,16 +5,16 @@
             <!--<svg class="bi" width="30" height="24">
                 <use xlink:href="#bootstrap"></use>
             </svg>-->
-            <img src="/assets/images/logo.webp" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
+            <!-- <img src="/assets/images/logo.webp" alt="Logo" width="35" height="35" class="d-inline-block align-text-top"> -->
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2025 JoshuaMC, Inc</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">Living4Christ</span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="http://github.com/popgtn"><i class="bi bi-github"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="http://twitter.com/popgoesthenoobs"><i class="bi bi-twitter"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/offical_joshua_mckenna/"><i class="bi bi-instagram"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/joshua-mckenna-a123a2258/"><i class="bi bi-linkedin"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/LivingForChrist/"><i class="bi bi-github"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-twitter"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-instagram"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-linkedin"></i></a></li>
     </ul>
     </div>
 </footer>
