--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,12 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/LivingForChrist/"><i class="bi bi-github"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-twitter"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-instagram"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-linkedin"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/LivingForChrist/" target="_blank"><i class="bi bi-github"></i></a></li>         <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-twitter"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#" target="_blank"><i class="bi bi-instagram"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#" target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#" target="_blank"><i class="bi bi-discord"></i></a></li>
+
     </ul>
     </div>
 </footer>
