Fixed a link issue in navigation bar

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,7 +21,7 @@
                         Helpful Resources
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="https://heaven4sure.com/" target="_blank" Heaven4Sure.com</a>
+                        <li><Heaven4Sure.com class="dropdown-item" href="https://heaven4sure.com/" target="_blank" >Heaven4Sure.com</a>
                         </li>
                         <li><a class="dropdown-item" href="https://www.thegloriousgospel.ca/"
                                 target="_blank">TheGloriousGospel.ca</a></li>
